k8s-manifests/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eva-webservices-new-dev
  labels:
    environment: development
