k8s-manifests/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eva-webservices-new
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: eva-webservices-new
        image: dockerhub.ebi.ac.uk/ebivariation/eva-webservices-new
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
